# memoryOSS

./: .dockerignore  .gitignore  .mcp.json  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  memoryoss.toml.example  package-lock.json  package.json  server.json  smithery.yaml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-release-artifacts.yml  ci.yml  release-smoke.yml  release.yml
commands/: forget.md  recall.md  remember.md
conformance/: README.md
conformance/fixtures/: history-bundle.json  passport-bundle.json  runtime-contract.json
conformance/schemas/: history-bundle.schema.json  passport-bundle.schema.json  runtime-contract.schema.json
deploy/helm/memoryoss/: Chart.yaml  values.yaml
deploy/helm/memoryoss/templates/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
deploy/systemd/: memoryoss-mcp-http.service
docs/: NORTH_STAR_BUILD_PLAN.md  STATE_MACHINES.md  SYSAUDIT_REPORT.md
docs/growth/: README-improved.md  cursor-setup-guide.md  demo-asciinema.sh  demo.tape  hackernews-show-hn.md  mcp-so-listing.md  pricing-section.html  reddit-claude-ai.md  reddit-cursor.md  reddit-local-llama.md  twitter-thread.md
docs/growth/github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
docs/growth/github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/releases/: v0.2.0.md
scripts/: build_mcp_package.py  deploy_website.sh
sdk/python/: pyproject.toml
sdk/python/memoryoss/: __init__.py  client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: conformance.ts  index.ts  test.ts
skills/memory-best-practices/: SKILL.md
smithery/: http.ts  index.ts  url-config.schema.json
src/: adapters.rs  config.rs  decompose.rs  embedding.rs  fusion.rs  intent_cache.rs  llm_client.rs  main.rs  mcp.rs  memory.rs  merger.rs  migration.rs  prefetch.rs  scoring.rs  sharing.rs  validation.rs
src/engines/: document.rs  fts.rs  group_commit.rs  indexer.rs  mod.rs  space_index.rs  vector.rs
src/security/: audit.rs  auth.rs  encryption.rs  mod.rs  rbac.rs  trust.rs
src/server/: gateway.rs  middleware.rs  mod.rs  proxy.rs  rate_limit.rs  routes.rs  tls.rs
tests/: benchmark-full-embeddings-report.json  conformance-report.json  e2e-proxy-report.json  extraction-eval-dataset.json  generate_report.py  integration.rs  reference_conformance.py  report-comparison.md  report.json  report.md  run_all.sh  run_benchmarks.py  run_benchmarks.sh  run_calibration.py  run_calibration.sh  run_conformance_kit.py  run_coverage_gaps.py  run_coverage_gaps.sh  run_e2e_proxy_test.py  run_extraction_eval.py  run_extraction_eval.sh  run_long_memory_regression.py  run_long_memory_regression.sh  run_mcp_packaging_regression.py  run_report_regression.py  run_setup_profile_smoke.py  run_soak_test.py  run_state_machine_dryrun.py  run_token_savings_benchmark.py  run_token_savings_benchmark_openai.py  run_universal_memory_loop.py  run_update_plane_smoke.py  run_wizard_matrix.py  run_wizard_matrix.sh  runner_common.py  soak-test-report.json  soak-test-verify-report.json  state-machine-dryrun-report.json  token-savings-report-gpt-4o.json  token-savings-report.json  (+1 more)
tests/fixtures/: external-memory-lane.json
tests/fixtures/benchmark-20k/: benchmark.toml.template
website/: datenschutz.html  impressum.html  index.html  install.sh  memoryoss.com.nginx.conf  roadmap.html  sitemap.xml  tests-report.json  tests.html  tests.js  whitepaper.html
