[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoryoss"
version = "0.2.0"
description = "Python SDK for memoryOSS — Memory for AI Agents"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
readme = "README.md"
authors = [
    { name = "memoryOSS Contributors", email = "hello@memoryoss.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://memoryoss.com"
Repository = "https://github.com/memoryOSScom/memoryOSS"
Issues = "https://github.com/memoryOSScom/memoryOSS/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
